--- a/Css/Adblock4limbo.user.css
+++ b/Css/Adblock4limbo.user.css
@@ -1,1 +1,31 @@
-a[href*="/kst6632.com/"]{pointer-events:none!important}a[href*="/kst6632.com/"]>img{display:none!important}a[onclick^="ClickobayST();"]{display:none!important}a[href="###"] img:not(#trk_hcaptcha):not([src^="https://captcha.su.baidu.com"]){display:none!important}a[href^=javascript] img:not(#trk_hcaptcha):not([src^="https://captcha.su.baidu.com"]){display:none!important}[rel*='noopener nofollow'],a[href^="http: //ads.trafficjunky.net/"],.topAdContainter,.adsbytrafficjunky,.ad-link{display:none!important}
+/* ddrk.me */
+a[href*="/kst6632.com/"] {
+    pointer-events: none !important;
+}
+
+a[href*="/kst6632.com/"]>img {
+    /*width: 1px !important;*/
+    display: none !important;
+}
+
+a[onclick^="ClickobayST();"] {
+    display: none !important
+}
+
+a[href="###"] img:not(#trk_hcaptcha):not([src^="https://captcha.su.baidu.com"]) {
+    display: none !important
+}
+
+a[href^="javascript"] img:not(#trk_hcaptcha):not([src^="https://captcha.su.baidu.com"]) {
+    display: none !important
+}
+
+/* cn.pornhub.com */
+[rel*='noopener nofollow'],
+a[href^="http: //ads.trafficjunky.net/"],
+.topAdContainter,
+.adsbytrafficjunky,
+.ad-link
+/*a[target='_blank']*/ {
+    display: none !important
+}
