--- a/Css/contentFarm.css
+++ b/Css/contentFarm.css
@@ -1,7 +1,10 @@
 /* Google 搜索广告 */
 
-[data-text-ad] ,
+[data-text-ad] {display: none! important;}
+#tads[aria-label] {display: none! important;}
+.adDDi {display: none! important;}
 #tvcap {display: none! important;}
+
 
 /*
 .xSQxL.HDOrGf,.HK0d3e,img,a{
