--- a/Css/4hu.css
+++ b/Css/4hu.css
@@ -1,5 +1,1 @@
-#adsbox {display: none! important;}
-.wrap + #midBox {display: none! important;}
-.wrap + #btmBox {display: none! important;}
-script[src="/static/base.js"] + #couplet {display: none! important;}
-.search + #midBox {display: none! important;}
+#adsbox{display:none!important}.wrap+#midBox{display:none!important}.wrap+#btmBox{display:none!important}script[src="/static/base.js"]+#couplet{display:none!important}.search+#midBox{display:none!important}
