--- a/Css/91porn.css
+++ b/Css/91porn.css
@@ -1,3 +1,1 @@
-img[class*="ad_img"] {display: none!important;}
-iframe[src*="ads"] {display: none!important;}
-img[href*='.gif'] {display: none!important;}
+img[class*=ad_img]{display:none!important}iframe[src*=ads]{display:none!important}img[href*='.gif']{display:none!important}
