--- a/Css/baidu.index.css
+++ b/Css/baidu.index.css
@@ -1,11 +1,1 @@
-/*div[style*='overflow'],
-[class*="ad"]  
-*/
-
-#foot,
-.recordcode,
-.index-copyright,
-div[style*='overflow'],
-article ,
-.rn-container,
-.s-loading-frame.bottom {display:none !important;}
+#foot,.recordcode,.index-copyright,div[style*=overflow],article,.rn-container,.s-loading-frame.bottom{display:none!important}
