--- a/Css/gimy.css
+++ b/Css/gimy.css
@@ -1,1 +1,6 @@
 img[src*=imgur]{display:none!important}
+div.myui-nav__tabbar {display: none! important}
+a.open-share{display: none! important}
+div.col-pd.mb10{display: none! important}
+div.dabox2{display: none! important}
+div#closebutton{display: none! important}
